syntax = "proto2";

package cloudprober.surfacer.otel;

import "github.com/cloudprober/cloudprober/internal/tlsconfig/proto/config.proto";

option go_package = "github.com/cloudprober/cloudprober/surfacers/internal/otel/proto";

enum Compression {
  NONE = 0;
  GZIP = 1;
}

message HTTPExporter{
  // If no URL is provided, OpenTelemetry SDK will use the environment variable
  // OTEL_EXPORTER_OTLP_METRICS_ENDPOINT or OTEL_EXPORTER_OTLP_ENDPOINT in that
  // preference order.
  optional string endpoint_url = 1;
  
  optional tlsconfig.TLSConfig tls_config = 2;

  // HTTP request headers. These can also be set using environment variables.
  map<string, string> http_header = 3;

  // Compression algorithm to use for HTTP requests.
  optional Compression compression = 4;
}

message GRPCExporter{
  // If no URL is provided, OpenTelemetry SDK will use the environment variable
  // OTEL_EXPORTER_OTLP_METRICS_ENDPOINT or OTEL_EXPORTER_OTLP_ENDPOINT in that
  // preference order.
  optional string endpoint = 1;
  
  optional tlsconfig.TLSConfig tls_config = 2;

  // HTTP request headers. These can also be set using environment variables.
  map<string, string> http_header = 3;

  // Compression algorithm to use for gRPC requests.
  optional Compression compression = 4;

  // Whether to use insecure gRPC connection.
  optional bool insecure = 5;
}

message SurfacerConf {
  oneof exporter {
    // OTLP HTTP exporter.
    HTTPExporter otlp_http_exporter = 1;

    // OTLP gRPC exporter.
    GRPCExporter otlp_grpc_exporter = 2;
  }

  optional int32 export_interval_sec = 3 [default = 10];
}
